--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FloatingButton"
+        android:theme="@style/Theme.RecyclerView"
         tools:targetApi="31">
         <activity
             android:name=".content_main"
@@ -30,7 +30,7 @@
             android:name=".Activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FloatingButton.NoActionBar">
+            android:theme="@style/Theme.RecyclerView.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
